# everpureresilience-sdk

./: README.md
linux/: LICENSE  SETUP.md  ers_cli.py  ers_system_test.py  pyproject.toml
linux/ers/: __init__.py  auth.py  config.py  formatting.py  http.py  instance.py  workflow.py
linux/ers/resources/: __init__.py  group.py  plan.py  site.py
linux/ers/sites/: __init__.py  base.py  vsphere.py
linux/system_tests/: __init__.py  config.py  level1_list.py  level2_operations.py  level3_workflows.py  runner.py
windows/: NOTICE  SETUP.md  system-test-config.json  vm-list.json
windows/ERS.PowerCLI/: ERS.PowerCLI.psd1  ERS.PowerCLI.psm1
windows/ERS.PowerCLI/Classes/: ErsInstance.ps1
windows/ERS.PowerCLI/Private/: ApiClient.ps1  Auth.ps1  Config.ps1  Constants.ps1  PlanEngine.ps1  ResourceHelpers.ps1  VmList.ps1  WorkflowHelpers.ps1
windows/ERS.PowerCLI/Public/: Connect-ErsVMNetwork.ps1  Enable-ErsGroup.ps1  Export-ErsTag.ps1  Get-ErsGroup.ps1  Get-ErsPlan.ps1  Get-ErsPlanSnapshot.ps1  Get-ErsPolicy.ps1  Get-ErsSite.ps1  Import-ErsTag.ps1  Invoke-ErsGroupRun.ps1  Invoke-ErsManagedFailback.ps1  Invoke-ErsManagedFailover.ps1  Invoke-ErsPlanCleanup.ps1  Invoke-ErsPlanFailback.ps1  Invoke-ErsPlanFailover.ps1  Invoke-ErsSystemTest.ps1  New-ErsInstance.ps1  Register-ErsSite.ps1  Start-ErsVM.ps1  Wait-ErsGroup.ps1  Wait-ErsPlan.ps1
windows/ERS.PowerCLI/Tests/SystemTests/: Level1.List.Tests.ps1  Level2.Operations.Tests.ps1  Level3.Workflows.Tests.ps1
